--- a/doc/src/TransParam.xsl.docbook
+++ b/doc/src/TransParam.xsl.docbook
@@ -39,15 +39,14 @@
 		</refsect1>
 		<refsect1>
 			<title>Description</title>
-			<para>This stylesheet enables you to transclude small snippets of XML to other locations within the document. It is complementary to the standard XML methods of transclusion using XInclude, in that it enables you to redefine text replacements locally. It is based on early versions of the <link xl:href="http://docbook.org/docs/transclusion">proposed standard for DocBook transclusion</link>.</para>
-			<para>Transclusion can be divided into large scale, context-free transclusion and small scale, parametrised transclusion. It is often necessary to perform the two types of transclusion in separate steps. For example, in DocBook, using an assembly to include chapters or sections in a book is also large scale and context-free. This stylesheet, on the other hand, is designed for small scale, parametrised transclusion; for example, inserting a product name at multiple locations in the document.</para>
+			<para>This stylesheet enables you to transclude small snippets of XML; for example, to insert a product name at multiple locations in the document. It is complementary to the standard XML methods of transclusion using XInclude, in that it enables you to redefine text replacements locally. It is based on early versions of the <link xl:href="http://docbook.org/docs/transclusion">proposed standard for DocBook transclusion</link>.</para>
 			<para>To define XML snippets for transclusion (<firstterm>definitions</firstterm>) create an extended link element with the specified transclusion role URI in the metadata at the start of the document. Within this extended link element add XLink resource elements which contain the XML text or elements for transclusion. (To refer to an external set of definitions, use XInclude to transclude the parameter definitions into the document!) Each XLink resource must have an <tag class="attribute">xl:label</tag> attribute which enables you to refer to this resource.</para>
 			<para>To redefine resources locally, e.g. within a single section of the document, add new XLink resources in the same way to the metadata at the start of that section.</para>
 			<para>To mark the places where the XML snippets should be transcluded (<firstterm>references</firstterm>) add elements with the <tag class="attribute">content:ref</tag> attribute to the body of the document. The <tag class="attribute">content:ref</tag> attribute should contain the name of the resource that you want to include at this point. Which element you use depends on the circumstances. For purposes of validation you should use an element which is permitted at the location of the reference. In most cases you may want to use an empty generic wrapper element, such as <tag class="element">phrase</tag> in DocBook.</para>
 			<para>The namespace URI for the <tag class="attribute">content:ref</tag> attribute is <uri>http://stanleysecurity.github.io/PACBook/ns/transclusion</uri>.</para>
 			<para>When the stylesheet is run, it parses the document and finds any element with the <tag class="attribute">content:ref</tag> attribute. When it does so, it finds the nearest ancestor element which contains an extended link element with the specified transclusion role URI, which in turn contains an XLink resource whose <tag class="attribute">xl:label</tag> attribute matches the <tag class="attribute">content:ref</tag> attribute. The stylesheet keeps the reference element, but replaces the content of the element with the content of the XLink resource.</para>
 			<para>You should run this stylesheet after initial large scale, context-free transclusion. If any of your translation strings contain transclusion references, you may need to run this stylesheet after translation instead.</para>
-			<para>Small scale, inline transclusion can have linguistic consequences. See <link xl:href="#LingHead.xsl">LingHead.xsl</link>, <link xl:href="#LingDepend.xsl">LingDepend.xsl</link>, <link xl:href="#LingCasing.xsl">LingCasing.xsl</link> and <link xl:href="#TextAbbrev.xsl">TextAbbrev.xsl</link> for details of stylesheets that attempt to deal with these problems.</para>
+			<para>Small scale, inline transclusion can have linguistic consequences. See <link xl:href="#Linguistic-Processing">Linguistic Processing</link> for details of the mechanism that PACBook attempts to deal with these problems.</para>
 			<refsect2>
 				<title>Notes</title>
 				<itemizedlist>
