--- a/doc/src/LingHead.xsl.docbook
+++ b/doc/src/LingHead.xsl.docbook
@@ -26,7 +26,7 @@
 		</refsynopsisdiv>
 		<refsect1>
 			<title>Input</title>
-			<para>An XML document. You must mark up the source document with linguistic attributes describing the syntactic case and / or definiteness required for each head noun in the document.</para>
+			<para>An XML document. You must mark up the source document with <link xl:href="#Linguistic-Processing">linguistic attributes</link> describing the syntactic case and / or definiteness required for each head noun in the document.</para>
 		</refsect1>
 		<refsect1>
 			<title>Output</title>
@@ -34,23 +34,31 @@
 		</refsect1>
 		<refsect1>
 			<title>Description</title>
-			<para>The stylesheet recurses through the document and copies each element. If any element is marked as a head noun, the stylesheet selects the correct declension based on the syntactic case and definiteness specified by the nearest ancestor element.</para>
+			<para>The stylesheet recurses through the document and copies each element. When the stylesheet finds an element with the <tag class="attribute">ling:type='head'</tag> attribute, it checks for the required definiteness and syntactic case according to the following algorithm:</para>
+			<orderedlist>
+				<listitem>
+					<para>The required definiteness is taken to be the value of the nearest ancestor <tag class="attribute">ling:class</tag> attribute; if there isn’t one, the required definiteness is assumed to be <tag class="attvalue">ind</tag> (indefinite).</para>
+				</listitem>
+				<listitem>
+					<para>The required syntactic case is taken to be the value of the nearest ancestor <tag class="attribute">ling:case</tag> attribute; if there isn’t one, the required syntactic case is assumed to be <tag class="attvalue">nom</tag> (nominative).</para>
+				</listitem>
+			</orderedlist>
+			<para>The stylesheet then checks for the definiteness and syntactic case of the current head element according to the following algorithm:</para>
+			<orderedlist>
+				<listitem>
+					<para>If the current head element has an <tag class="attribute">ling:class</tag> attribute, its value is taken as the head element’s definiteness; if it doesn’t, the head element’s definiteness is assumed to be <tag class="attvalue">ind</tag> (indefinite).</para>
+				</listitem>
+				<listitem>
+					<para>If the current head element has an <tag class="attribute">ling:case</tag> attribute, its value is taken as the head element’s syntactic case; if it doesn’t, the head element’s syntactic case is assumed to be <tag class="attvalue">nom</tag> (nominative).</para>
+				</listitem>
+			</orderedlist>
+			<para>If the case and class of the head element match the required case and class, the head element is copied to the output; if not, the head element and all its descendent elements are deleted.</para>
 			<para>This is useful when you need to transclude a term into a sentence and want to select the correct form of the term, depending on the case and / or definiteness required in the target sentence.</para>
-			<para>When you define a noun for transclusion, you must include in the transcluded text all the possible forms of the head noun in the current language. Each form must be wrapped in a suitable spanning element, e.g. <tag class="element">phrase</tag> in DocBook, <tag class="element">ph</tag> in DITA or <tag class="element">span</tag> in HTML. Each form should have the <tag class="attribute">ling:type='head'</tag> attribute to indicate that it is a head noun, and should also have <tag class="attribute">ling:case</tag> and <tag class="attribute">ling:class</tag> attributes to specify the case and / or definiteness of each form, depending on the language.</para>
-			<para>At each location where the term is to be transcluded, you must wrap the transcluded term and any preceding or following dependent words, e.g. articles or adjectives, in another spanning element. This spanning element should be marked up with the case and / or definiteness you require for this instance of the term, depending on the current language.</para>
-			<itemizedlist>
-				<listitem>
-					<para>The <tag class="attribute">ling:case</tag> attribute may have any string value, as long as it matches a value used to mark case in the PACBook syntactic dictionary for the current language. In the PACBook syntactic dictionaries, the values used are <tag class="attvalue">nom</tag> for nominative, <tag class="attvalue">acc</tag> for accusative, <tag class="attvalue">gen</tag> for genitive and <tag class="attvalue">dat</tag> for dative. The <tag class="attvalue">gen</tag> case is used to mark the possessive in English. If the stylesheet cannot determine the required case for a transcluded term, it assumes the nominative form is required.</para>
-				</listitem>
-				<listitem>
-					<para>The <tag class="attribute">ling:class</tag> attribute may have any string value, as long as it matches a value used to mark inflectional class in the PACBook syntactic dictionary for the current language. In the PACBook syntactic dictionaries, the values used in German are <tag class="attvalue">strong</tag>, <tag class="attvalue">weak</tag> and <tag class="attvalue">mixed</tag>; the values used in Dutch, Swedish and Norwegian are <tag class="attvalue">ind</tag> for indefinite, <tag class="attvalue">def</tag> for definite. If the stylesheet cannot determine the required inflectional class for a transcluded term, it assumes the indefinite form is required.</para>
-				</listitem>
-			</itemizedlist>
-			<para>The namespace URI for the linguistic attributes is <uri>http://stanleysecurity.github.io/PACBook/ns/linguistics</uri>.</para>
-			<para>This stylesheet should be applied after the head nouns have all been transcluded into place. When the stylesheet finds a head element, it checks whether the element’s definiteness and / or case match the definiteness and / or case of the nearest ancestor element. If they match, the head element is copied to the output; if not, the head element and all its descendent elements are deleted.</para>
+			<para>This stylesheet should be applied after the head nouns have all been transcluded into place.</para>
 		</refsect1>
 		<refsect1>
 			<title>Roadmap</title>
+			<para>The stylesheet does not decline head nouns for grammatical number, i.e. singular or plural. (Dependent words <emphasis>are</emphasis> declined for number.) It is currently assumed that you will define separate transclusion resources for the singular and plural forms of a word. This may change in future, especially if the stylesheets move to support languages that have more than two grammatical numbers.</para>
 			<para>In DocBook files, this stylesheet matches <tag class="element">token</tag> elements as well as elements with the <tag class="attribute">ling:type='head'</tag> attribute. This may be removed in a future release.</para>
 		</refsect1>
 	</refentry>
