--- a/tests/Fixup_Test.docbook
+++ b/tests/Fixup_Test.docbook
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet href="http://www.jabadaw.com/PAC/files/Docbook.css" type="text/css"?>
 <article xmlns="http://docbook.org/ns/docbook"
          xmlns:xl="http://www.w3.org/1999/xlink"
