--- a/tests/Param_51_Expect.docbook
+++ b/tests/Param_51_Expect.docbook
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><?xml-stylesheet href="http://www.jabadaw.com/PAC/files/Docbook.css" type="text/css"?><article xmlns="http://docbook.org/ns/docbook" xmlns:xl="http://www.w3.org/1999/xlink" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:its="http://www.w3.org/2005/11/its" xmlns:content="http://stanleysecurity.github.io/PACBook/ns/transclusion" xmlns:xlf="urn:oasis:names:tc:xliff:document:1.2" version="5.1-variant PACBook" xml:id="param_test" status="draft" xml:lang="en-GB">
   <title>Parametric Transclusion Test</title>
   <info>
-    <link type="extended" xl:role="http://stanleysecurity.github.io/PACBook/role/transclusion">
-      <link type="resource" xl:label="res_1">Foo 2000</link>
-      <link type="resource" xl:label="res_2">Bar 2000</link>
+    <link xl:type="extended" xl:role="http://stanleysecurity.github.io/PACBook/role/transclusion">
+      <link xl:type="resource" xl:label="res_1">Foo 2000</link>
+      <link xl:type="resource" xl:label="res_2">Bar 2000</link>
     </link>
   </info>
   <section>
@@ -13,9 +13,9 @@
     <section>
       <title>And...</title>
       <info>
-        <link type="extended" xl:role="http://stanleysecurity.github.io/PACBook/role/transclusion">
-          <link type="resource" xl:label="res_1">Baz 2000</link>
-          <link type="resource" xl:label="res_2">Qux 2000</link>
+        <link xl:type="extended" xl:role="http://stanleysecurity.github.io/PACBook/role/transclusion">
+          <link xl:type="resource" xl:label="res_1">Baz 2000</link>
+          <link xl:type="resource" xl:label="res_2">Qux 2000</link>
         </link>
       </info>
       <para>This should say Baz 2000: <phrase>Baz 2000</phrase>.</para>
